--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
     <title>Limited Audience - Fashionable HD Bondage</title>
   </head>
   <body>
+      <form name="contact" netlify netlify-honeypot="url" hidden>
+        <input type="text" name="name">
+        <input type="email" name="email">
+        <textarea name="message"></textarea>
+      </form>
     <div id="app"></div>
     <!-- built files will be auto injected -->
   </body>
