--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width">
     <title>Limited Audience - Fashionable HD Bondage</title>
+    <link rel="apple-touch-icon" sizes="180x180" href="/static/favicon.png">
+		<link rel="icon" type="image/png" href="/static/favicon.png" sizes="180x180">
   </head>
   <body>
       <form name="contact" netlify netlify-honeypot="url" hidden>
