--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width">
+    <meta name="viewport" content="initial-scale=1, width=device-width">
     <title>Limited Audience - Fashionable HD Bondage</title>
     <link rel="apple-touch-icon" sizes="180x180" href="/static/favicon.png">
 		<link rel="icon" type="image/png" href="/static/favicon.png" sizes="180x180">
