Implement entrance warning modal

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="initial-scale=1, width=device-width">
+    <meta name="description" content="Limited Audience shows gorgeous women in all manner of bondage, with an emphasis on a wide range of outfits, including satin, period, latex, dresses, and high heels.">
     <title>Limited Audience - Fashionable HD Bondage</title>
     <link rel="apple-touch-icon" sizes="180x180" href="/static/favicon.png">
 		<link rel="icon" type="image/png" href="/static/favicon.png" sizes="180x180">
