--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <meta name="description" content="Limited Audience shows gorgeous women in all manner of bondage, with an emphasis on a wide range of outfits, including satin, period, latex, dresses, and high heels.">
     <title>Limited Audience - Fashionable HD Bondage</title>
     <link rel="apple-touch-icon" sizes="180x180" href="/static/favicon.png">
-		<link rel="icon" type="image/png" href="/static/favicon.png" sizes="180x180">
+    <link rel="icon" type="image/png" href="/static/favicon.png" sizes="180x180">
+    <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>    
   </head>
   <body>
       <form name="contact" netlify netlify-honeypot="url" hidden>
