--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
       <form name="contact" netlify netlify-honeypot="url" hidden>
         <input type="text" name="name">
         <input type="email" name="email">
+        <input hidden type="url" name="url">
+        <div data-netlify-recaptcha></div>
         <textarea name="message"></textarea>
       </form>
     <div id="app"></div>
